--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-09  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Updated Hungarian translation by Gabor Kelemen.
+
 2004-09-08  David Lodge <dave@cirt.net>
 
 	* ang.po: Updated Olde Englisc translation.
