--- a/po/hu.po
+++ b/po/hu.po
@@ -10,9 +10,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gtk+\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-25 13:27-0400\n"
-"PO-Revision-Date: 2004-08-03 18:20+0200\n"
-"Last-Translator: Laszlo Dvornik <dvornik@gnome.hu>\n"
+"POT-Creation-Date: 2004-09-09 12:38+0200\n"
+"PO-Revision-Date: 2004-09-09 16:33+0200\n"
+"Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -870,7 +870,7 @@ msgstr "A kék fény mennyisége a színben."
 
 #: gtk/gtkcolorsel.c:1895
 msgid "_Opacity:"
-msgstr "Á_tlátszóság:"
+msgstr "Á_tlátszatlanság:"
 
 #: gtk/gtkcolorsel.c:1903 gtk/gtkcolorsel.c:1914
 msgid "Transparency of the color."
@@ -1041,7 +1041,7 @@ msgstr "_Név:"
 
 #: gtk/gtkfilechooserdefault.c:3134
 msgid "_Browse for other folders"
-msgstr "Más mappák _tallózása"
+msgstr "Egyéb mappák _böngészése"
 
 #: gtk/gtkfilechooserdefault.c:3376
 msgid "Save in _folder:"
@@ -1400,7 +1400,7 @@ msgstr "_Előnézet:"
 
 #: gtk/gtkfontsel.c:1375
 msgid "Font Selection"
-msgstr "Betűkészlet választó"
+msgstr "Betűkészlet-választó"
 
 #: gtk/gtkgamma.c:400
 msgid "Gamma"
@@ -1535,7 +1535,7 @@ msgstr "default:LTR"
 #: gtk/gtknotebook.c:2680 gtk/gtknotebook.c:5073
 #, c-format
 msgid "Page %u"
-msgstr "%u. lap"
+msgstr "%u. oldal"
 
 #: gtk/gtkradiotoolbutton.c:90
 msgid "Group"
