--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-12  Dafydd Harries  <daf@muse.19inch.net>
+
+	* cy.po: Updated Welsh translation.
+
 2004-09-09  Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish Translation
