--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,23 @@
+Overview of Changes from GTK+ 2.4.9 to GTK+ 2.4.10
+==================================================
+* GtkFileChooser
+ - Fix some memory leaks [Kjartan Maraas]
+* Default theme
+ - Improve drawing of expanders [Matthias Clasen]
+* GtkEntryCompletion
+ - Improve positioning of popups [Matthias]
+* gdk-pixbuf
+ - Fix saving of pixbufs with alpha-channel as jpeg [Emmanuel Pacaud]
+ - Security fixes [Chris Evans]
+* Win32 bug fixes 
+ - Improve tablet handling [Robert Ögren]
+ - Handle screen resolution changes [Arjohn Kampman, Tor Lillqvist]
+ - Fix loading of input modules on Win32 [Kazuki IWAMOTO]
+* Other bug fixes [Tim Janik, Bill Haneman, Padraig O'Briain,
+  Frederic Croszat, Matthias, Felipe Heidrich, Lorenzo Gil
+  Sanchez, Olivier Andrieu, Jean Bréfort]
+* Updated translations (ang,bn,cs,cy,de,en_CA,hu,ne,nn,ro,tr,uk)
+
 Overview of Changes from GTK+ 2.4.7 to GTK+ 2.4.8
 =================================================
 * GtkFileChooser
