--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-15  Matthias Clasen  <mclasen@redhat.com>
+
+	* NEWS: Updates
+
 2004-09-14  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/queryimmodules.c (escape_string): Copy code from queryloaders.c
