--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1,20 +1,21 @@
 # traditional Chinese translation of gtk+ 2.x
-# Copyright (C) 2000, 01, 02, 03 Free Software Foundation, Inc.
-# 辛立仁 <hsin@med.cgu.edu.tw>, 2000.
+# Copyright (C) 2000, 01, 02, 03, 04 Free Software Foundation, Inc.
 # Chih-Wei Huang <cwhuang@linux.org.tw>, 2000.
 # Abel Cheung <maddog@linux.org.hk>, 2001-2003.
+# 辛立仁 <hsin@med.cgu.edu.tw>, 2000, 2004
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: gtk+ 2.3.0\n"
+"Project-Id-Version: gtk+ 2.4.10\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-25 13:27-0400\n"
-"PO-Revision-Date: 2003-05-07 17:36+0800\n"
-"Last-Translator: Abel Cheung <maddog@linux.org.hk>\n"
+"POT-Creation-Date: 2004-09-12 12:05+0200\n"
+"PO-Revision-Date: 2004-09-16 01:35+0800\n"
+"Last-Translator: L-Jen Hsin <hsin@med.cgu.edu.tw>\n"
 "Language-Team: Chinese (traditional) <zh-l10n@linux.org.tw>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8-bit\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: gdk-pixbuf/gdk-pixbuf-animation.c:150 gdk-pixbuf/gdk-pixbuf-io.c:779
 #: gdk-pixbuf/gdk-pixbuf-io.c:926 tests/testfilechooser.c:192
@@ -73,9 +74,9 @@ msgid "Failed to load image '%s': %s"
 msgstr "無法載入圖像‘%s’：%s"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1158
-#, fuzzy, c-format
+#, c-format
 msgid "Error writing to image file: %s"
-msgstr "分析 JPEG 圖像檔時發生錯誤 (%s)"
+msgstr "寫入圖片檔時發生錯誤 (%s)"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1202 gdk-pixbuf/gdk-pixbuf-io.c:1318
 #, c-format
@@ -88,14 +89,12 @@ msgid "Insufficient memory to save image to callback"
 msgstr "記憶體不足以載入 XBM 圖像檔"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1243
-#, fuzzy
 msgid "Failed to open temporary file"
-msgstr "無法開啟 TIFF 圖像"
+msgstr "無法開啟暫存檔"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1262
-#, fuzzy
 msgid "Failed to read from temporary file"
-msgstr "當載入 XBM 圖像時無法寫入暫存檔"
+msgstr "無法讀入暫存檔"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1444
 #, c-format
@@ -110,9 +109,8 @@ msgid ""
 msgstr "寫入圖像後無法關閉‘%s’，資料可能無法完整地儲存：%s"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1657 gdk-pixbuf/gdk-pixbuf-io.c:1707
-#, fuzzy
 msgid "Insufficient memory to save image into a buffer"
-msgstr "記憶體不足以載入 XBM 圖像檔"
+msgstr "記憶體不足以將圖片寫入緩衝區"
 
 #: gdk-pixbuf/gdk-pixbuf-loader.c:378
 #, c-format
@@ -139,15 +137,14 @@ msgid "Image pixel data corrupt"
 msgstr "圖像像素資料損毀"
 
 #: gdk-pixbuf/gdk-pixdata.c:430
-#, fuzzy, c-format
+#, c-format
 msgid "failed to allocate image buffer of %u byte"
 msgid_plural "failed to allocate image buffer of %u bytes"
 msgstr[0] "無法分配 %u 位元組的圖像緩衝區"
-msgstr[1] "無法分配 %u 位元組的圖像緩衝區"
 
 #: gdk-pixbuf/io-ani.c:244
 msgid "Unexpected icon chunk in animation"
-msgstr ""
+msgstr "動畫中含有未預期的圖示區塊"
 
 #: gdk-pixbuf/io-ani.c:337
 msgid "Unsupported animation type"
@@ -211,11 +208,11 @@ msgstr "GIF 圖像載入模組無法分析本圖像。"
 
 #: gdk-pixbuf/io-gif.c:664
 msgid "Bad code encountered"
-msgstr ""
+msgstr "遭遇到不良的編碼"
 
 #: gdk-pixbuf/io-gif.c:674
 msgid "Circular table entry in GIF file"
-msgstr ""
+msgstr "GIF 檔案含有環形表格紀錄"
 
 #: gdk-pixbuf/io-gif.c:869 gdk-pixbuf/io-gif.c:1430 gdk-pixbuf/io-gif.c:1476
 #: gdk-pixbuf/io-gif.c:1591
@@ -280,16 +277,16 @@ msgstr "記憶體不足以載入 ICO 檔"
 
 #: gdk-pixbuf/io-ico.c:939
 msgid "Image too large to be saved as ICO"
-msgstr ""
+msgstr "圖像太大無法存為 ICO 格式"
 
 #: gdk-pixbuf/io-ico.c:950
 msgid "Cursor hotspot outside image"
-msgstr ""
+msgstr "游標熱點在圖像之外"
 
 #: gdk-pixbuf/io-ico.c:973
 #, c-format
 msgid "Unsupported depth for ICO file: %d"
-msgstr ""
+msgstr "ICO 檔含有未支援的深度: %d"
 
 #: gdk-pixbuf/io-ico.c:1202
 msgid "The ICO image format"
@@ -309,7 +306,7 @@ msgstr "記憶體不足以載入圖像，請嘗試退出其它應用程式來釋
 #: gdk-pixbuf/io-jpeg.c:383 gdk-pixbuf/io-jpeg.c:749
 #, c-format
 msgid "Unsupported JPEG color space (%s)"
-msgstr ""
+msgstr "未支援的 JPEG 色彩空間 (%s)"
 
 #: gdk-pixbuf/io-jpeg.c:481 gdk-pixbuf/io-jpeg.c:678 gdk-pixbuf/io-jpeg.c:941
 #: gdk-pixbuf/io-jpeg.c:950
@@ -334,9 +331,8 @@ msgid "The JPEG image format"
 msgstr "JPEG 圖像格式"
 
 #: gdk-pixbuf/io-pcx.c:191
-#, fuzzy
 msgid "Couldn't allocate memory for header"
-msgstr "無法分配 TGA 標頭所需的記憶體"
+msgstr "無法分配圖片標頭所需的記憶體"
 
 #: gdk-pixbuf/io-pcx.c:206 gdk-pixbuf/io-pcx.c:566
 #, fuzzy
@@ -344,24 +340,22 @@ msgid "Couldn't allocate memory for context buffer"
 msgstr "無法分配記憶體來載入 TGA 內容結構"
 
 #: gdk-pixbuf/io-pcx.c:607
-#, fuzzy
 msgid "Image has invalid width and/or height"
-msgstr "圖像高度為零"
+msgstr "圖片的寬度和/或高度無效"
 
+# 姑且用 color depth 代替 bpp -- Abel
 #: gdk-pixbuf/io-pcx.c:619 gdk-pixbuf/io-pcx.c:680
-#, fuzzy
 msgid "Image has unsupported bpp"
-msgstr "不支援這種 BMP 圖像檔標頭大小"
+msgstr "圖片不支援這種色彩深度"
 
 #: gdk-pixbuf/io-pcx.c:624 gdk-pixbuf/io-pcx.c:632
-#, fuzzy, c-format
+#, c-format
 msgid "Image has unsupported number of %d-bit planes"
-msgstr "不支援這種 BMP 圖像檔標頭大小"
+msgstr ""
 
 #: gdk-pixbuf/io-pcx.c:648
-#, fuzzy
 msgid "Couldn't create new pixbuf"
-msgstr "無法分配新的 pixbuf"
+msgstr "無法産生新的 pixbuf"
 
 #: gdk-pixbuf/io-pcx.c:656
 #, fuzzy
@@ -369,22 +363,20 @@ msgid "Couldn't allocate memory for line data"
 msgstr "無法分配 IOBuffer 資料所需的記憶體"
 
 #: gdk-pixbuf/io-pcx.c:663
-#, fuzzy
 msgid "Couldn't allocate memory for paletted data"
-msgstr "無法分配 IOBuffer 資料所需的記憶體"
+msgstr ""
 
 #: gdk-pixbuf/io-pcx.c:710
 msgid "Didn't get all lines of PCX image"
-msgstr ""
+msgstr "未取得 PIX 圖像每一行的資料"
 
 #: gdk-pixbuf/io-pcx.c:717
 msgid "No palette found at end of PCX data"
-msgstr ""
+msgstr "PCX 資料末端沒有找到色盤"
 
 #: gdk-pixbuf/io-pcx.c:758
-#, fuzzy
 msgid "The PCX image format"
-msgstr "BMP 圖像格式"
+msgstr "PCX 圖片格式"
 
 #: gdk-pixbuf/io-png.c:55
 msgid "Bits per channel of PNG image is invalid."
@@ -502,7 +494,7 @@ msgstr "檔案太早結束"
 
 #: gdk-pixbuf/io-pnm.c:743 gdk-pixbuf/io-pnm.c:974
 msgid "Raw PNM formats require exactly one whitespace before sample data"
-msgstr ""
+msgstr "原始 PNM 格式需要在取樣資料前有一格空格 (whitespace)"
 
 #: gdk-pixbuf/io-pnm.c:770
 msgid "Can't allocate memory for loading PNM image"
@@ -574,7 +566,7 @@ msgstr "無法分配色盤項目所需的記憶體"
 
 #: gdk-pixbuf/io-tga.c:721
 msgid "Unexpected bitdepth for colormap entries"
-msgstr ""
+msgstr "colormap 輸入含有未預期的位元深度"
 
 #: gdk-pixbuf/io-tga.c:739
 msgid "Can't allocate TGA header memory"
@@ -749,11 +741,10 @@ msgstr "Alt"
 #. * Note that this flipping is in top the text direction flipping,
 #. * so if you have a default text direction of RTL and YM, then
 #. * the year will appear on the right.
-#.
+#. 譯註：中文應該是 xxxx年x月
 #: gtk/gtkcalendar.c:709
-#, fuzzy
 msgid "calendar:MY"
-msgstr "清除"
+msgstr "calendar:YM"
 
 #. Translate to calendar:week_start:0 if you want Sunday to be the
 #. * first day of the week to calendar:week_start:1 if you want Monday
@@ -761,15 +752,15 @@ msgstr "清除"
 #.
 #: gtk/gtkcalendar.c:719
 msgid "calendar:week_start:0"
-msgstr ""
+msgstr "calendar:week_start:0"
 
 #: gtk/gtkcolorbutton.c:219 gtk/gtkcolorbutton.c:573
 msgid "Pick a Color"
-msgstr ""
+msgstr "選取顏色"
 
 #: gtk/gtkcolorbutton.c:465
 msgid "Received invalid color data\n"
-msgstr ""
+msgstr "收到了無效的顏色資料\n"
 
 #: gtk/gtkcolorsel.c:567
 msgid ""
@@ -866,9 +857,8 @@ msgid "_Opacity:"
 msgstr "透明度(_O)："
 
 #: gtk/gtkcolorsel.c:1903 gtk/gtkcolorsel.c:1914
-#, fuzzy
 msgid "Transparency of the color."
-msgstr "目前選擇的顏色的透明度。"
+msgstr "目前選擇顏色的透明度。"
 
 #: gtk/gtkcolorsel.c:1921
 msgid "Color _Name:"
@@ -886,9 +876,8 @@ msgid "_Palette"
 msgstr "色盤(_P)"
 
 #: gtk/gtkcolorsel.c:1987
-#, fuzzy
 msgid "Color Wheel"
-msgstr "滾輪"
+msgstr "色彩圓盤"
 
 #: gtk/gtkcolorseldialog.c:116
 msgid "Color Selection"
@@ -908,9 +897,9 @@ msgstr "插入統一碼控制字元(_I)"
 
 #: gtk/gtkfilechooser.c:1583 gtk/gtkfilechooser.c:1627
 #: gtk/gtkfilechooser.c:1702 gtk/gtkfilechooser.c:1746
-#, fuzzy, c-format
+#, c-format
 msgid "Invalid filename: %s"
-msgstr "無效的 XBM 檔"
+msgstr "無效的檔案名稱: %s"
 
 #: gtk/gtkfilechooserdefault.c:791
 #, c-format
@@ -918,6 +907,8 @@ msgid ""
 "Could not retrieve information about %s:\n"
 "%s"
 msgstr ""
+"無法取得關於 %s 的資訊:\n"
+"%s"
 
 #: gtk/gtkfilechooserdefault.c:802
 #, c-format
@@ -925,6 +916,8 @@ msgid ""
 "Could not add a bookmark for %s:\n"
 "%s"
 msgstr ""
+"無法為 %s 增加書籤:\n"
+"%s"
 
 #: gtk/gtkfilechooserdefault.c:817 gtk/gtkfilechooserdefault.c:5469
 #, c-format
@@ -932,38 +925,39 @@ msgid ""
 "Could not build file name from '%s' and '%s':\n"
 "%s"
 msgstr ""
+"無法從 '%s' 以及 '%s' 建立檔案名稱:\n"
+"%s"
 
 #: gtk/gtkfilechooserdefault.c:833
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Could not change the current folder to %s:\n"
 "%s"
 msgstr ""
-"建立資料夾“%s”時發生錯誤：%s\n"
+"無法變更目前資料夾至 %s\n"
 "%s"
 
 #: gtk/gtkfilechooserdefault.c:1143 gtk/gtkpathbar.c:842
-#, fuzzy
 msgid "Home"
-msgstr "首頁(_H)"
+msgstr "家目錄"
 
 #: gtk/gtkfilechooserdefault.c:1166 gtk/gtkpathbar.c:844
 msgid "Desktop"
-msgstr ""
+msgstr "桌面"
 
 #: gtk/gtkfilechooserdefault.c:1564
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Could not create folder %s:\n"
 "%s"
 msgstr ""
-"建立資料夾“%s”時發生錯誤：%s\n"
+"無法建立資料夾 %s\n"
 "%s"
 
 #: gtk/gtkfilechooserdefault.c:1744
 #, c-format
 msgid "Could not add bookmark for %s because it is not a folder."
-msgstr ""
+msgstr "無法增加 %s 為書籤因為並不是一個資料夾。"
 
 #: gtk/gtkfilechooserdefault.c:1849
 #, c-format
@@ -971,18 +965,19 @@ msgid ""
 "Could not remove bookmark for %s:\n"
 "%s"
 msgstr ""
+"無法移除書籤 %s:\n"
+"%s"
 
 #: gtk/gtkfilechooserdefault.c:2431
 #, c-format
 msgid "Could not add a bookmark for %s because it is an invalid path name."
-msgstr ""
+msgstr "無法增加 %s 為書籤因為其為無效的路徑名稱。"
 
 #: gtk/gtkfilechooserdefault.c:2572
 msgid "Shortcuts"
-msgstr ""
+msgstr "捷徑"
 
 #: gtk/gtkfilechooserdefault.c:2626
-#, fuzzy
 msgid "Folder"
 msgstr "資料夾"
 
@@ -999,132 +994,120 @@ msgstr "移除(_R)"
 
 #: gtk/gtkfilechooserdefault.c:2762
 msgid "Show _Hidden Files"
-msgstr ""
+msgstr "顯示隱藏檔案(_H)"
 
 #: gtk/gtkfilechooserdefault.c:2877 gtk/gtkfilesel.c:766
 msgid "Files"
 msgstr "檔案"
 
 #: gtk/gtkfilechooserdefault.c:2904
-#, fuzzy
 msgid "Name"
-msgstr "顏色名稱(_N)："
+msgstr "名稱"
 
 #: gtk/gtkfilechooserdefault.c:2926
 msgid "Size"
 msgstr "大小"
 
 #: gtk/gtkfilechooserdefault.c:2938
-#, fuzzy
 msgid "Modified"
-msgstr "模式"
+msgstr "最後更改"
 
 #. Create Folder
 #: gtk/gtkfilechooserdefault.c:2983
-#, fuzzy
 msgid "Create Fo_lder"
-msgstr "新增資料夾"
+msgstr "建立資料夾(_L)"
 
 #. Name entry
 #: gtk/gtkfilechooserdefault.c:3090
-#, fuzzy
 msgid "_Name:"
-msgstr "顏色名稱(_N)："
+msgstr "名稱(_N)："
 
 #: gtk/gtkfilechooserdefault.c:3134
 msgid "_Browse for other folders"
-msgstr ""
+msgstr "瀏覽其他資料夾(_B)"
 
 #: gtk/gtkfilechooserdefault.c:3376
-#, fuzzy
 msgid "Save in _folder:"
-msgstr "新增資料夾"
+msgstr "儲存於資料夾(_F)："
 
 #: gtk/gtkfilechooserdefault.c:3378
-#, fuzzy
 msgid "Create in _folder:"
-msgstr "新增資料夾"
+msgstr "新增於資料夾(_F)："
 
 #: gtk/gtkfilechooserdefault.c:4065
 msgid "Can't change to folder because it isn't local"
-msgstr ""
+msgstr "無法變更至該資料夾因其並非本地端"
 
 #: gtk/gtkfilechooserdefault.c:4208
-#, fuzzy
 msgid "Could not find the path"
-msgstr "無法儲存其它部份"
+msgstr "無法找到路徑"
 
 #: gtk/gtkfilechooserdefault.c:4569
 #, c-format
 msgid "shortcut %s does not exist"
-msgstr ""
+msgstr "捷徑 %s 並不存在"
 
 #: gtk/gtkfilechooserdefault.c:5242
 msgid "Type name of new folder"
-msgstr ""
+msgstr "請輸入新資料夾名稱"
 
 #: gtk/gtkfilechooserdefault.c:5271
 #, c-format
 msgid "%d byte"
 msgid_plural "%d bytes"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%d 位元組"
 
 #: gtk/gtkfilechooserdefault.c:5273
 #, c-format
 msgid "%.1f K"
-msgstr ""
+msgstr "%.1f K"
 
 #: gtk/gtkfilechooserdefault.c:5275
 #, c-format
 msgid "%.1f M"
-msgstr ""
+msgstr "%.1f M"
 
 #: gtk/gtkfilechooserdefault.c:5277
 #, c-format
 msgid "%.1f G"
-msgstr ""
+msgstr "%.1f G"
 
 #: gtk/gtkfilechooserdefault.c:5322
-#, fuzzy
 msgid "Today"
-msgstr "強制回應"
+msgstr "今天"
 
 #: gtk/gtkfilechooserdefault.c:5324
 msgid "Yesterday"
-msgstr ""
+msgstr "昨天"
 
 #: gtk/gtkfilechooserdefault.c:5335
-#, fuzzy
 msgid "Unknown"
-msgstr "(未知)"
+msgstr "未知"
 
 #: gtk/gtkfilechooserdefault.c:5430
 msgid "Cannot change to the folder you specified as it is an invalid path."
-msgstr ""
+msgstr "無法變更至您所指定的資料夾，因為您所指定的為無效的路徑。"
 
 #: gtk/gtkfilechooserdefault.c:5507
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Could not select %s:\n"
 "%s"
 msgstr ""
-"建立資料夾“%s”時發生錯誤：%s\n"
+"無法選取 %s：\n"
 "%s"
 
 #: gtk/gtkfilechooserdefault.c:5546
 msgid "Open Location"
-msgstr ""
+msgstr "開啟位置"
 
 #: gtk/gtkfilechooserdefault.c:5553
-#, fuzzy
 msgid "Save in Location"
-msgstr "選取檔案(_S)："
+msgstr "存入位置"
 
 #: gtk/gtkfilechooserdefault.c:5572
-#, fuzzy
 msgid "_Location:"
-msgstr "選取檔案(_S)："
+msgstr "位置(_L)："
 
 #: gtk/gtkfilesel.c:730
 msgid "Folders"
@@ -1225,7 +1208,7 @@ msgid "Error deleting file \"%s\": %s"
 msgstr "刪除檔案“%s”時發生錯誤：%s"
 
 #: gtk/gtkfilesel.c:1623
-#, fuzzy, c-format
+#, c-format
 msgid "Really delete file \"%s\"?"
 msgstr "是否確定刪除檔案“%s”？"
 
@@ -1279,12 +1262,12 @@ msgid "_Selection: "
 msgstr "選取檔案(_S)："
 
 #: gtk/gtkfilesel.c:3139
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "The filename \"%s\" couldn't be converted to UTF-8. (try setting the "
 "environment variable G_FILENAME_ENCODING): %s"
 msgstr ""
-"檔案名稱“%s”無法轉換至 UTF-8 (請嘗試設定環境變數 G_BROKEN_FILENAMES)：%s"
+"檔案名稱“%s”無法轉換至 UTF-8 (請嘗試設定環境變數 G_FILENAME_ENCODING)：%s"
 
 #: gtk/gtkfilesel.c:3142
 msgid "Invalid UTF-8"
@@ -1300,37 +1283,36 @@ msgstr "無法轉換檔案名稱"
 
 #: gtk/gtkfilesystemmodel.c:1266
 msgid "(Empty)"
-msgstr ""
+msgstr "(空的)"
 
 #: gtk/gtkfilesystemunix.c:419 gtk/gtkfilesystemwin32.c:386
 #, c-format
 msgid "%s: %s"
-msgstr ""
+msgstr "%s：%s"
 
 #: gtk/gtkfilesystemunix.c:426 gtk/gtkfilesystemunix.c:621
 #: gtk/gtkfilesystemwin32.c:393 gtk/gtkfilesystemwin32.c:1364
-#, fuzzy, c-format
+#, c-format
 msgid "error getting information for '%s': %s"
-msgstr "建立資料夾“%s”時發生錯誤：%s\n"
+msgstr "擷取‘%s’的資訊時發生錯誤：%s"
 
 #: gtk/gtkfilesystemunix.c:490 gtk/gtkfilesystemwin32.c:434
-#, fuzzy, c-format
+#, c-format
 msgid "error creating directory '%s': %s"
-msgstr "建立資料夾“%s”時發生錯誤：%s\n"
+msgstr "建立資料夾‘%s’時發生錯誤：%s"
 
 #: gtk/gtkfilesystemunix.c:570 gtk/gtkfilesystemwin32.c:494
 msgid "This file system does not support mounting"
-msgstr ""
+msgstr "本檔案系統並不支援掛載"
 
 #: gtk/gtkfilesystemunix.c:578
-#, fuzzy
 msgid "Filesystem"
-msgstr "檔案"
+msgstr "檔案系統"
 
 #: gtk/gtkfilesystemunix.c:735
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get a stock icon for %s"
-msgstr "無法識別圖像檔‘%s’的圖像格式"
+msgstr "無法為 %s 取得內建圖示"
 
 #: gtk/gtkfilesystemunix.c:830
 #, c-format
@@ -1338,29 +1320,31 @@ msgid ""
 "The name \"%s\" is not valid because it contains the character \"%s\". "
 "Please use a different name."
 msgstr ""
+"名稱”%s”是無效的因為其包含了字元”%s”。"
+"請選擇另一個名稱。"
 
 #: gtk/gtkfilesystemunix.c:1438 gtk/gtkfilesystemwin32.c:923
 #, c-format
 msgid "Bookmark saving failed (%s)"
-msgstr ""
+msgstr "儲存書籤失敗(%s)"
 
 #: gtk/gtkfilesystemunix.c:1734
-#, fuzzy, c-format
+#, c-format
 msgid "error getting information for '%s'"
-msgstr "建立資料夾“%s”時發生錯誤：%s\n"
+msgstr "取得關於 '%s' 的資訊時發生錯誤"
 
 #: gtk/gtkfilesystemwin32.c:1126
 msgid "This file system does not support icons for everything"
-msgstr ""
+msgstr "本檔案系統並不支援所有檔案含有圖示"
 
 #: gtk/gtkfontbutton.c:177 gtk/gtkfontbutton.c:294
 msgid "Pick a Font"
-msgstr ""
+msgstr "請選擇字型"
 
 #. Initialize fields
 #: gtk/gtkfontbutton.c:288
 msgid "Sans 12"
-msgstr ""
+msgstr "Sans 12"
 
 #: gtk/gtkfontbutton.c:806
 msgid "Font"
@@ -1417,25 +1401,27 @@ msgid ""
 "You can get a copy from:\n"
 "\t%s"
 msgstr ""
+"找不到圖示 '%s'。佈景主題 '%s'\n"
+"也找不到，也許您需要安裝它？\n"
+"您可以從下列地方取得：\n"
+"\t%s"
 
 #: gtk/gtkicontheme.c:1251
 #, c-format
 msgid "Icon '%s' not present in theme"
-msgstr ""
+msgstr "圖示 '%s' 不存在於佈景主題中"
 
 #: gtk/gtkimmodule.c:421
-#, fuzzy
 msgid "Default"
-msgstr "預設寬度"
+msgstr "預設"
 
 #: gtk/gtkinputdialog.c:234
 msgid "Input"
 msgstr "輸入"
 
 #: gtk/gtkinputdialog.c:243
-#, fuzzy
 msgid "No extended input devices"
-msgstr "缺少輸入裝置"
+msgstr "無延伸輸入裝置"
 
 #: gtk/gtkinputdialog.c:255
 msgid "_Device:"
@@ -1532,11 +1518,11 @@ msgstr "第 %u 頁"
 
 #: gtk/gtkradiotoolbutton.c:90
 msgid "Group"
-msgstr ""
+msgstr "群組"
 
 #: gtk/gtkradiotoolbutton.c:91
 msgid "The radio tool button whose group this button belongs to."
-msgstr ""
+msgstr "此按鈕所屬的單選工具按鈕群組。"
 
 #: gtk/gtkrc.c:2391
 #, c-format
@@ -1660,7 +1646,7 @@ msgstr "上(_U)"
 
 #: gtk/gtkstock.c:316
 msgid "_Harddisk"
-msgstr ""
+msgstr "硬碟(_H)"
 
 #: gtk/gtkstock.c:317
 msgid "_Help"
@@ -1672,11 +1658,11 @@ msgstr "首頁(_H)"
 
 #: gtk/gtkstock.c:319
 msgid "Increase Indent"
-msgstr ""
+msgstr "增加縮排"
 
 #: gtk/gtkstock.c:320
 msgid "Decrease Indent"
-msgstr ""
+msgstr "減少縮排"
 
 #: gtk/gtkstock.c:321
 msgid "_Index"
@@ -1707,9 +1693,8 @@ msgid "_Right"
 msgstr "靠右(_R)"
 
 #: gtk/gtkstock.c:328
-#, fuzzy
 msgid "_Network"
-msgstr "新增(_N)"
+msgstr "網路(_N)"
 
 #: gtk/gtkstock.c:329
 msgid "_New"
@@ -1817,11 +1802,11 @@ msgstr "是(_Y)"
 
 #: gtk/gtkstock.c:356
 msgid "_Normal Size"
-msgstr ""
+msgstr "正常尺寸(_N)"
 
 #: gtk/gtkstock.c:357
 msgid "Best _Fit"
-msgstr ""
+msgstr "符合視窗(_F)"
 
 #: gtk/gtkstock.c:358
 msgid "Zoom _In"
@@ -1841,19 +1826,19 @@ msgstr "_RLM 右至左標記"
 
 #: gtk/gtktextutil.c:49
 msgid "LRE Left-to-right _embedding"
-msgstr ""
+msgstr "LRE 左至右內嵌(_E)"
 
 #: gtk/gtktextutil.c:50
 msgid "RLE Right-to-left e_mbedding"
-msgstr ""
+msgstr "RLE 右至左內嵌(_M)"
 
 #: gtk/gtktextutil.c:51
 msgid "LRO Left-to-right _override"
-msgstr ""
+msgstr "LRO 左至右覆蓋(_O)"
 
 #: gtk/gtktextutil.c:52
 msgid "RLO Right-to-left o_verride"
-msgstr ""
+msgstr "RLO 右至左覆蓋(_V)"
 
 #: gtk/gtktextutil.c:53
 msgid "PDF _Pop directional formatting"
@@ -1861,15 +1846,15 @@ msgstr ""
 
 #: gtk/gtktextutil.c:54
 msgid "ZWS _Zero width space"
-msgstr "_ZWS 零寬度空格"
+msgstr "ZWS 零寬度空格(_Z)"
 
 #: gtk/gtktextutil.c:55
 msgid "ZWJ Zero width _joiner"
-msgstr ""
+msgstr "ZWJ 零寬度合併(_J)"
 
 #: gtk/gtktextutil.c:56
 msgid "ZWNJ Zero width _non-joiner"
-msgstr ""
+msgstr "ZWNJ 零寬度非合併(_N)"
 
 #: gtk/gtkthemes.c:70
 #, c-format
@@ -1883,21 +1868,21 @@ msgstr "--- 無提示 ---"
 #: gtk/gtkuimanager.c:1100
 #, c-format
 msgid "Unknown attribute '%s' on line %d char %d"
-msgstr ""
+msgstr "未知的屬性 '%s' 於第 %d 行第 %d 字元"
 
 #: gtk/gtkuimanager.c:1318
 #, c-format
 msgid "Unexpected start tag '%s' on line %d char %d"
-msgstr ""
+msgstr "未預期的開始標記 '%s' 於第 %d 行第 %d 字元"
 
 #: gtk/gtkuimanager.c:1403
 #, c-format
 msgid "Unexpected character data on line %d char %d"
-msgstr ""
+msgstr "為預期的字元資料於第 %d 行第 %d 字元"
 
 #: gtk/gtkuimanager.c:2189
 msgid "Empty"
-msgstr ""
+msgstr "空的"
 
 #. ID
 #: modules/input/imam-et.c:454
@@ -1907,7 +1892,7 @@ msgstr "阿姆哈拉文字 (EZ+)"
 #. ID
 #: modules/input/imcedilla.c:91
 msgid "Cedilla"
-msgstr ""
+msgstr "下加符 (Cedilla)"
 
 #. ID
 #: modules/input/imcyrillic-translit.c:217
@@ -1950,40 +1935,12 @@ msgid "X Input Method"
 msgstr "X 輸入法"
 
 #: tests/testfilechooser.c:179
-#, fuzzy, c-format
+#, c-format
 msgid "Could not get information for file '%s': %s"
-msgstr "無法識別圖像檔‘%s’的圖像格式"
+msgstr "無法為檔案 '%s' 取得資訊：%s"
 
 #~ msgid "Unsupported TIFF variant"
 #~ msgstr "不支援的 TIFF 圖像格式"
-
-#, fuzzy
-#~ msgid "File name"
-#~ msgstr "檔案名稱"
-
-#, fuzzy
-#~ msgid "Preview"
-#~ msgstr "預覽(_P)："
-
-#, fuzzy
-#~ msgid "Add"
-#~ msgstr "新增(_A)"
-
-#, fuzzy
-#~ msgid "Remove"
-#~ msgstr "移除(_R)"
-
-#, fuzzy
-#~ msgid "Up"
-#~ msgstr "上(_U)"
-
-#, fuzzy
-#~ msgid "_Filename:"
-#~ msgstr "檔案名稱"
-
-#, fuzzy
-#~ msgid "Current folder: %s"
-#~ msgstr "目前的顏色"
 
 #~ msgid "Zoom _100%"
 #~ msgstr "原來大小(_1)"
