Updated British translation.
2004-09-08  David Lodge <dave@cirt.net>

        * en_GB.po: Updated British translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-08  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated British translation.
+
 2004-09-15  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation by
