--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Sep 16 23:10:37 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gdk/x11/gdkselection-x11.c (make_list): Warn if a UTF8_STRING
+	property contains invalid UTF-8. (#152845, Owen Taylor)
+
 2004-09-15  Tor Lillqvist  <tml@iki.fi>
 
 	* gdk/win32/gdkwindow-win32.c (gdk_window_get_frame_extents):
