--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1,23 +1,37 @@
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
+# translation of gtk+.gtk-2-4.po to Português/Brasil
 # Brazilian Portuguese translation of the Gimp Toolkit
-# Copyright (C) 1999 Free Software Foundation, Inc.
+# Copyright (C) 1999, 2004 Free Software Foundation, Inc.
 # Alex Sandro Queiroz e Silva <asandro@lcg.dc.ufc.br>, 1999.
 # Gustavo Noronha Silva <kov@debian.org>, 2004.
 # Alex Camacho Castilho <gnomebr@uol.com.br>, 2004.
 # Afonso Celso Medina <medina@maua.br>, 2004.
-# 
-# 
+# Afonso Celso Medina <medina@maua.,br>, 2004.
+#
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: gtk+ 2.2.4\n"
+"Project-Id-Version: gtk+.gtk-2-4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-25 13:27-0400\n"
-"PO-Revision-Date: 2004-08-25 13:56-0400\n"
-"Last-Translator: Afonso Celso Medina <medina@maua.br>\n"
-"Language-Team: Portuguese/Brazil <gnome-l10n-br@listas.cipsga.org.br>\n"
+"POT-Creation-Date: 2004-09-16 04:09+0200\n"
+"PO-Revision-Date: 2004-09-17 02:08-0300\n"
+"Last-Translator: Afonso Celso Medina <medina@maua.,br>\n"
+"Language-Team: Português/Brasil <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: KBabel 1.3.1\n"
 
 #: gdk-pixbuf/gdk-pixbuf-animation.c:150 gdk-pixbuf/gdk-pixbuf-io.c:779
 #: gdk-pixbuf/gdk-pixbuf-io.c:926 tests/testfilechooser.c:192
@@ -33,8 +47,7 @@ msgstr "O arquivo de imagem '%s' não contém dados"
 #: gdk-pixbuf/gdk-pixbuf-animation.c:208 gdk-pixbuf/gdk-pixbuf-io.c:831
 #: gdk-pixbuf/gdk-pixbuf-io.c:969 tests/testfilechooser.c:237
 #, c-format
-msgid ""
-"Failed to load image '%s': reason not known, probably a corrupt image file"
+msgid "Failed to load image '%s': reason not known, probably a corrupt image file"
 msgstr ""
 "Falha ao carregar a imagem '%s': razão desconhecida, provavelmente o arquivo "
 "está corrompido"
@@ -70,7 +83,7 @@ msgstr "O tipo de imagem '%s' não é suportado"
 #: gdk-pixbuf/gdk-pixbuf-io.c:663
 #, c-format
 msgid "Couldn't recognize the image file format for file '%s'"
-msgstr "Não pude reconhecer o formato de arquivo de imagem do arquivo '%s'"
+msgstr "Impossível reconhecer o formato de arquivo de imagem do arquivo '%s'"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:671
 msgid "Unrecognized image file format"
@@ -89,8 +102,7 @@ msgstr "Erro ao gravar no arquivo de imagem: %s"
 #: gdk-pixbuf/gdk-pixbuf-io.c:1202 gdk-pixbuf/gdk-pixbuf-io.c:1318
 #, c-format
 msgid "This build of gdk-pixbuf does not support saving the image format: %s"
-msgstr ""
-"Essa compilação do gdk-pixbuf não suporta salvar o formato de imagem: %s"
+msgstr "Essa compilação do gdk-pixbuf não suporta salvar o formato de imagem: %s"
 
 #: gdk-pixbuf/gdk-pixbuf-io.c:1231
 msgid "Insufficient memory to save image to callback"
@@ -174,7 +186,7 @@ msgstr "Memória insuficiente para carregar animação"
 
 #: gdk-pixbuf/io-ani.c:400 gdk-pixbuf/io-ani.c:417 gdk-pixbuf/io-ani.c:428
 msgid "Malformed chunk in animation"
-msgstr "Pedaço mal-formado na animação"
+msgstr "Pedaço malformado na animação"
 
 #: gdk-pixbuf/io-ani.c:676
 msgid "The ANI image format"
@@ -263,12 +275,12 @@ msgstr "A imagem GIF estava truncada ou incompleta."
 msgid "The GIF image format"
 msgstr "Formato de imagem GIF"
 
-#: gdk-pixbuf/io-ico.c:219 gdk-pixbuf/io-ico.c:271 gdk-pixbuf/io-ico.c:332
-#: gdk-pixbuf/io-ico.c:395 gdk-pixbuf/io-ico.c:425
+#: gdk-pixbuf/io-ico.c:219 gdk-pixbuf/io-ico.c:271 gdk-pixbuf/io-ico.c:340
+#: gdk-pixbuf/io-ico.c:403 gdk-pixbuf/io-ico.c:433
 msgid "Not enough memory to load icon"
 msgstr "Memória insuficiente para carregar ícone"
 
-#: gdk-pixbuf/io-ico.c:256
+#: gdk-pixbuf/io-ico.c:256 gdk-pixbuf/io-ico.c:330
 msgid "Invalid header in icon"
 msgstr "Cabeçalho inválido no ícone"
 
@@ -280,32 +292,32 @@ msgstr "O ícone tem largura zero"
 msgid "Icon has zero height"
 msgstr "O ícone tem altura zero"
 
-#: gdk-pixbuf/io-ico.c:347
+#: gdk-pixbuf/io-ico.c:355
 msgid "Compressed icons are not supported"
-msgstr "Não são suportados ícones compimidos "
+msgstr "Não são suportados ícones comprimidos "
 
-#: gdk-pixbuf/io-ico.c:380
+#: gdk-pixbuf/io-ico.c:388
 msgid "Unsupported icon type"
 msgstr "Tipo de ícone não suportado"
 
-#: gdk-pixbuf/io-ico.c:474
+#: gdk-pixbuf/io-ico.c:482
 msgid "Not enough memory to load ICO file"
 msgstr "Memória insuficiente para carregar arquivo ICO"
 
-#: gdk-pixbuf/io-ico.c:939
+#: gdk-pixbuf/io-ico.c:947
 msgid "Image too large to be saved as ICO"
 msgstr "Imagem grande demais para ser salva como ICO"
 
-#: gdk-pixbuf/io-ico.c:950
+#: gdk-pixbuf/io-ico.c:958
 msgid "Cursor hotspot outside image"
 msgstr "Zona de ação do cursor fora da imagem"
 
-#: gdk-pixbuf/io-ico.c:973
+#: gdk-pixbuf/io-ico.c:981
 #, c-format
 msgid "Unsupported depth for ICO file: %d"
 msgstr "Profundidade não suportada para arquivo ICO: %d"
 
-#: gdk-pixbuf/io-ico.c:1202
+#: gdk-pixbuf/io-ico.c:1210
 msgid "The ICO image format"
 msgstr "Formato de imagem ICO"
 
@@ -327,12 +339,12 @@ msgstr ""
 msgid "Unsupported JPEG color space (%s)"
 msgstr "Espeço de cores JPEG não suportado (%s)"
 
-#: gdk-pixbuf/io-jpeg.c:481 gdk-pixbuf/io-jpeg.c:678 gdk-pixbuf/io-jpeg.c:941
-#: gdk-pixbuf/io-jpeg.c:950
+#: gdk-pixbuf/io-jpeg.c:481 gdk-pixbuf/io-jpeg.c:678 gdk-pixbuf/io-jpeg.c:943
+#: gdk-pixbuf/io-jpeg.c:952
 msgid "Couldn't allocate memory for loading JPEG file"
 msgstr "Impossível alocar memória para carregar o arquivo JPEG"
 
-#: gdk-pixbuf/io-jpeg.c:893
+#: gdk-pixbuf/io-jpeg.c:894
 #, c-format
 msgid ""
 "JPEG quality must be a value between 0 and 100; value '%s' could not be "
@@ -341,15 +353,14 @@ msgstr ""
 "A qualidade JPEG deve ser um valor entre 0 e 100; o valor '%s' não pôde ser "
 "interpretado."
 
-#: gdk-pixbuf/io-jpeg.c:908
+#: gdk-pixbuf/io-jpeg.c:909
 #, c-format
-msgid ""
-"JPEG quality must be a value between 0 and 100; value '%d' is not allowed."
+msgid "JPEG quality must be a value between 0 and 100; value '%d' is not allowed."
 msgstr ""
 "A qualidade JPEG deve ser um valor entre 0 e 100; o valor '%d' não é "
 "permitido."
 
-#: gdk-pixbuf/io-jpeg.c:1069
+#: gdk-pixbuf/io-jpeg.c:1071
 msgid "The JPEG image format"
 msgstr "Formato de imagem JPEG"
 
@@ -416,8 +427,7 @@ msgstr "O PNG transformado não é RGB nem RGBA."
 
 #: gdk-pixbuf/io-png.c:162
 msgid "Transformed PNG has unsupported number of channels, must be 3 or 4."
-msgstr ""
-"O PNG transformado tem um número de canais não suportado, deve ser 3 ou 4."
+msgstr "O PNG transformado tem um número de canais não suportado, deve ser 3 ou 4."
 
 #: gdk-pixbuf/io-png.c:183
 #, c-format
@@ -447,8 +457,7 @@ msgid "Fatal error reading PNG image file: %s"
 msgstr "Erro fatal carregando arquivo de imagem PNG: %s"
 
 #: gdk-pixbuf/io-png.c:813
-msgid ""
-"Keys for PNG text chunks must have at least 1 and at most 79 characters."
+msgid "Keys for PNG text chunks must have at least 1 and at most 79 characters."
 msgstr ""
 "Chaves para blocos de PNG text devem ter ao menos 1 e no máximo 79 "
 "caracteres."
@@ -459,8 +468,7 @@ msgstr "Chaves para blocos de PNG text devem ser caracteres ASCII."
 
 #: gdk-pixbuf/io-png.c:854
 #, c-format
-msgid ""
-"Value for PNG text chunk %s can not be converted to ISO-8859-1 encoding."
+msgid "Value for PNG text chunk %s can not be converted to ISO-8859-1 encoding."
 msgstr ""
 "O valor para blocos PNG text %s não pode ser convertido para a codificação "
 "ISO-8859-1."
@@ -624,8 +632,7 @@ msgstr "Formato de imagem Targa"
 
 #: gdk-pixbuf/io-tiff.c:175
 msgid "Could not get image width (bad TIFF file)"
-msgstr ""
-"Não foi possível conseguir a largura da imagem (arquivo TIFF defeituoso)"
+msgstr "Não foi possível conseguir a largura da imagem (arquivo TIFF defeituoso)"
 
 #: gdk-pixbuf/io-tiff.c:182
 msgid "Could not get image height (bad TIFF file)"
@@ -694,8 +701,7 @@ msgstr "Memória insuficiente para carregar arquivo de imagem XBM"
 
 #: gdk-pixbuf/io-xbm.c:441
 msgid "Failed to write to temporary file when loading XBM image"
-msgstr ""
-"Falha ao escrever para arquivo temporário enquanto carregava uma imagem XBM"
+msgstr "Falha ao escrever para arquivo temporário enquanto carregava uma imagem XBM"
 
 #: gdk-pixbuf/io-xbm.c:476
 msgid "The XBM image format"
@@ -714,28 +720,32 @@ msgid "XPM file has image height <= 0"
 msgstr "O arquivo XPM tem uma altura de imagem <= 0"
 
 #: gdk-pixbuf/io-xpm.c:1253
-msgid "XPM file has invalid number of colors"
-msgstr "O arquivo XPM tem um número de cores inválido"
-
-#: gdk-pixbuf/io-xpm.c:1261
 msgid "XPM has invalid number of chars per pixel"
 msgstr "O XPM tem um número inválido de caracteres por pixel"
 
-#: gdk-pixbuf/io-xpm.c:1279
-msgid "Can't read XPM colormap"
-msgstr "Não foi possível ler o mapa de cores XPM"
+#: gdk-pixbuf/io-xpm.c:1260
+msgid "XPM file has invalid number of colors"
+msgstr "O arquivo XPM tem um número de cores inválido"
 
-#: gdk-pixbuf/io-xpm.c:1317
+#: gdk-pixbuf/io-xpm.c:1272 gdk-pixbuf/io-xpm.c:1281
+msgid "Cannot allocate memory for loading XPM image"
+msgstr "Impossível alocar memória para carregar imagem XPM"
+
+#: gdk-pixbuf/io-xpm.c:1295
+msgid "Can't read XPM colormap"
+msgstr "Impossível ler o mapa de cores XPM"
+
+#: gdk-pixbuf/io-xpm.c:1333
 msgid "Can't allocate memory for loading XPM image"
 msgstr "Não foi possível alocar memória para carregar imagem XPM"
 
-#: gdk-pixbuf/io-xpm.c:1508
+#: gdk-pixbuf/io-xpm.c:1524
 msgid "Failed to write to temporary file when loading XPM image"
-msgstr "Falha ao escrever arquivo temporário ao carregar imagem XPM"
+msgstr "Falha ao escrever arquivo temporário enquanto carregava imagem XPM"
 
-#: gdk-pixbuf/io-xpm.c:1543
+#: gdk-pixbuf/io-xpm.c:1559
 msgid "The XPM image format"
-msgstr "Formato de imagem XPM"
+msgstr "O formato de imagem XPM"
 
 #. This is the text that should appear next to menu accelerators
 #. * that use the shift key. If the text on this key isn't typically
@@ -822,7 +832,7 @@ msgid ""
 "drag a color swatch here or right-click it and select \"Save color here.\""
 msgstr ""
 "Clique nesta entrada da paleta para torná-la a cor atual. Para alterar esta "
-"entrada, arraste uma cor para aqui ou clique com o botão direito sobre a cor "
+"entrada, arraste uma cor até aqui ou clique com o botão direito sobre a cor "
 "e selecione a opção \"Salvar cor aqui.\""
 
 #: gtk/gtkcolorsel.c:1846
@@ -964,7 +974,7 @@ msgid ""
 "Could not build file name from '%s' and '%s':\n"
 "%s"
 msgstr ""
-"Impossível construir nome de arquivo de '%s' e '%s':\n"
+"Impossível construir o nome de arquivo de '%s' e '%s':\n"
 "%s"
 
 #: gtk/gtkfilechooserdefault.c:833
@@ -996,8 +1006,7 @@ msgstr ""
 #: gtk/gtkfilechooserdefault.c:1744
 #, c-format
 msgid "Could not add bookmark for %s because it is not a folder."
-msgstr ""
-"Não foi possível adicionar um marcador para %s porque ele não é uma pasta."
+msgstr "Não foi possível adicionar um marcador para %s porque ele não é uma pasta."
 
 #: gtk/gtkfilechooserdefault.c:1849
 #, c-format
@@ -1012,8 +1021,8 @@ msgstr ""
 #, c-format
 msgid "Could not add a bookmark for %s because it is an invalid path name."
 msgstr ""
-"Não foi possível adicionar um marcador para %s porque ele é um caminho "
-"inválido."
+"Não foi possível adicionar um marcador para %s porque ele não é um caminho "
+"válido."
 
 #: gtk/gtkfilechooserdefault.c:2572
 msgid "Shortcuts"
@@ -1028,7 +1037,7 @@ msgstr "Pasta"
 #.
 #: gtk/gtkfilechooserdefault.c:2673 gtk/gtkstock.c:293
 msgid "_Add"
-msgstr "A_dicionar"
+msgstr "_Adicionar"
 
 #: gtk/gtkfilechooserdefault.c:2683 gtk/gtkstock.c:341
 msgid "_Remove"
@@ -1036,7 +1045,7 @@ msgstr "_Remover"
 
 #: gtk/gtkfilechooserdefault.c:2762
 msgid "Show _Hidden Files"
-msgstr "Mostrar _Arquivos Escondidos"
+msgstr "Mostrar Arquivos _Escondidos"
 
 #: gtk/gtkfilechooserdefault.c:2877 gtk/gtkfilesel.c:766
 msgid "Files"
@@ -1139,7 +1148,7 @@ msgid ""
 "Could not select %s:\n"
 "%s"
 msgstr ""
-"Não foi possível selecionar %s:\n"
+"Impossível selecionar %s:\n"
 "%s"
 
 #: gtk/gtkfilechooserdefault.c:5546
@@ -1196,8 +1205,7 @@ msgstr "_Renomear Arquivo"
 
 #: gtk/gtkfilesel.c:1439
 #, c-format
-msgid ""
-"The folder name \"%s\" contains symbols that are not allowed in filenames"
+msgid "The folder name \"%s\" contains symbols that are not allowed in filenames"
 msgstr ""
 "O nome de pasta \"%s\" contém símbolos que não são permitidos em nomes de "
 "arquivos"
@@ -1213,8 +1221,7 @@ msgstr ""
 
 #: gtk/gtkfilesel.c:1442 gtk/gtkfilesel.c:1678
 msgid "You probably used symbols not allowed in filenames."
-msgstr ""
-"Provavelmente você utilizou símbolos não permitidos em nomes de arquivos."
+msgstr "Provavelmente você utilizou símbolos não permitidos em nomes de arquivos."
 
 #: gtk/gtkfilesel.c:1450
 #, c-format
@@ -1251,8 +1258,7 @@ msgstr ""
 
 #: gtk/gtkfilesel.c:1571 gtk/gtkfilesel.c:1692
 msgid "It probably contains symbols not allowed in filenames."
-msgstr ""
-"Provavelmente você utilizou símbolos não permitidos em nomes de arquivos."
+msgstr "Provavelmente você utilizou símbolos não permitidos em nomes de arquivos."
 
 #: gtk/gtkfilesel.c:1580
 #, c-format
@@ -1334,7 +1340,7 @@ msgstr "Nome muito extenso"
 
 #: gtk/gtkfilesel.c:4021
 msgid "Couldn't convert filename"
-msgstr "Impossível de converter o nome do arquivo"
+msgstr "Impossível converter o nome do arquivo"
 
 #: gtk/gtkfilesystemmodel.c:1266
 msgid "(Empty)"
@@ -1577,22 +1583,22 @@ msgstr "Grupo"
 
 #: gtk/gtkradiotoolbutton.c:91
 msgid "The radio tool button whose group this button belongs to."
-msgstr "O botão de seleção cujo grupo esse botão pertence."
+msgstr "O botão de seleção a cujo grupo esse botão pertence."
 
 #: gtk/gtkrc.c:2391
 #, c-format
 msgid "Unable to find include file: \"%s\""
-msgstr "Incapaz de encontrar o arquivo de include: \"%s\""
+msgstr "Impossível encontrar o arquivo de include: \"%s\""
 
 #: gtk/gtkrc.c:3030 gtk/gtkrc.c:3033
 #, c-format
 msgid "Unable to locate image file in pixmap_path: \"%s\""
-msgstr "Incapaz de encontrar o arquivo de imagem no pixmap_path: \"%s\""
+msgstr "Impossível encontrar o arquivo de imagem no pixmap_path: \"%s\""
 
 #: gtk/gtkrc.c:3468
 #, c-format
 msgid "Pixmap path element: \"%s\" must be absolute, %s, line %d"
-msgstr "Elemento de caminho pixmap: \"%s\" tem de ser absoluto, %s, linha %d"
+msgstr "Elemento de caminho pixmap: \"%s\" deve ser absoluto, %s, linha %d"
 
 #. KEEP IN SYNC with gtkiconfactory.c stock icons, when appropriate
 #: gtk/gtkstock.c:285
@@ -1993,3 +1999,4 @@ msgstr "Método de Entrada do X"
 #, c-format
 msgid "Could not get information for file '%s': %s"
 msgstr "Impossível obter informações sobre o arquivo '%s': %s"
+
