--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Sep 22 00:52:44 2004  Matthias Clasen  <mclasen@redhat.com>
+
+	* demos/gtk-demo/pixbufs.c (do_pixbufs): Don't leak the frame
+	pixbuf.
+
 2004-09-21  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_should_respond): 
