--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-25  Matthias Clasen  <mclasen@x1-6-00-50-fc-70-9f-e0>
+
+	* gtk/gtktextiter.c (inside_word_func): Don't access 
+	attr[-1].  (#153628, Padraig O'Briain)
+
 2004-09-22  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c (selection_check_foreach_cb): Don't use
